--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -16,7 +16,7 @@
                     <newline/>
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,supplier_id,context)"/>
                     <field name="qty"/>
-                    <field name="is_manufactured"/>
+                    <field name="is_manufactured"/> <!-- context="" on_change="onchange_is_manufactured(is_manufactured,temp_mrp_bom_ids)"/>-->
                     <field name="supplier_id" attrs="{'invisible': [('is_manufactured', '=', True)],
                                 'required': [('is_manufactured', '=', False)],
                                 'readonly': [('state','!=','draft')]}"/>
@@ -25,7 +25,8 @@
                         <button name="save_suppliers" string="Save" icon="gtk-save" type="object"/>
                         <button name="confirm_suppliers" string="OK" icon="gtk-apply" type="object"/>
                     </group>
-                    <group colspan="8" col="8" attrs="{'invisible': [('temp_mrp_bom_ids','=',False)]}">
+                    <group colspan="8" col="8" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
+                                                                         ('is_manufactured','=',False)]}">
                         <notebook colspan="4">
                             <page string="BOM">
                                 <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context=""
@@ -43,18 +44,20 @@
                                         <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
                                         <field name="product_id" context="{'line_id': parent.id}" on_change="onchange_temp_product_id(level,product_id,product_qty,context)"
-                                               attrs="{'readonly': [('product_type','!=','product')]}"/>
-                                        <field name="product_qty" attrs="{'readonly': [('product_type','!=','product')]}"/>
+                                               attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
+                                        <field name="product_qty" attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
                                         <field name="product_uom" readonly="1"/>
                                         <field name="mrp_routing_id"/>
                                         <field name="stock_availability"/>
                                         <field name="spare"/>
                                         <field name="cost"/>
-                                        <field name="is_manufactured" on_change="onchange_temp_manufacture(is_manufactured)"/>
+                                        <field name="is_manufactured" on_change="onchange_temp_manufacture(is_manufactured)"
+                                            attrs="{'readonly': [('level','=',0)]}"/>
                                         <field name="supplier_id" on_change="onchange_temp_supplier_id(supplier_id,product_id)"
                                                attrs="{'required': [('is_manufactured', '=', False)],
                                                     'readonly': ['|',('is_manufactured', '=', True),
-                                                                     ('product_type','!=','product')]}"/>
+                                                                     ('product_type','!=','product'),
+                                                                     ('level','=',0)]}"/>
                                         <field name="supplier_ids" invisible="1"/>
                                     </tree>
                                 </field>
