--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -34,13 +34,11 @@
                                        attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
                                                                  ('is_manufactured','=',False)],
                                        'readonly':['|',('state','!=','draft'),('is_manufactured','=',False)]}">
-                                    <tree string="BoM Structure" editable="top" create="false"
+                                    <tree string="BoM Structure" create="false" editable="top"
                                         colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                                         <field name="row_color" invisible="1"/>
                                         <field name="is_leaf"/>
                                         <field name="level" invisible="1"/>
-                                        <!-- field name="mrp_bom_id"/>
-                                        <field name="mrp_bom_parent_id"/>-->
                                         <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
                                         <field name="product_id" context="{'line_id': parent.id}" on_change="onchange_temp_product_id(level,product_id,product_qty,context)"
@@ -71,6 +69,7 @@
                                         <field name="mrp_routing_id"/>
                                         <field name="sequence"/>
                                         <field name="workcenter_id"/>
+                                        <field name="user_id"/>
                                         <field name="name"/>
                                     </tree>
                                 </field>
