User shown in routing

--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -70,6 +70,7 @@
                                         <field name="sequence"/>
                                         <field name="workcenter_id"/>
                                         <field name="user_id"/>
+                                        <field name="user_ids" invisible="1"/>
                                         <field name="name"/>
                                     </tree>
                                 </field>
