Routing color fix

--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -43,8 +43,9 @@
                                         <field name="level" invisible="1"/>
                                         <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
-                                        <field name="product_id" context="{'line_id': parent.id}" on_change="onchange_temp_product_id(level,product_id,product_qty,context)"
+                                        <field name="product_id"
                                                attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
+                                         <!-- context="{'line_id': parent.id}" on_change="onchange_temp_product_id(level,product_id,product_qty,id,context)"-->
                                         <field name="product_qty" attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
                                         <field name="product_uom" readonly="1"/>
                                         <field name="mrp_routing_id"/>
