--- a/sale_order_requirement/static/src/css/style.css
+++ b/sale_order_requirement/static/src/css/style.css
@@ -1,4 +1,3 @@
-
 th[data-id=level_name] {
     min-width: 90px;
 }
@@ -22,3 +21,14 @@ th[data-id=level_name] {
     color: #FAAB21;
 }
 
+.openerp a.oe_secondary_submenu_item:hover,
+.openerp a.oe_secondary_submenu_item.leaf.active,
+.openerp .oe_button:hover
+{
+    background-color: #48A43F;
+}
+
+.openerp .oe_forms .oe_form_button .oe_button {
+    /* border: 1px solid #48A43F; */
+    border: 1px solid darkgreen;
+}
