--- a/work_order/views/stock_picking_view.xml
+++ b/work_order/views/stock_picking_view.xml
@@ -16,6 +16,20 @@
             </field>
         </record>
 
+        <record id="view_stock_picking_commission" model="ir.ui.view">
+            <field name="name">work_order_picking_int_inherit</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.view_picking_form"/>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <field name="backorder_id" position="after">
+                    <field name="project_id" on_change="onchange_account_id(project_id)" attrs="{'invisible': [('sale_id','!=',False), ('account_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
+                    <field name="account_id" attrs="{'invisible': ['|', ('sale_id','!=',False), ('project_id','!=',False)]}" groups="analytic.group_analytic_accounting"/>
+                    <field name="sale_project" attrs="{'invisible': [('sale_id','=',False)]}" groups="analytic.group_analytic_accounting"/>
+                </field>
+            </field>
+        </record>
+
         <!--<record id="view_stock_picking_sale" model="ir.ui.view">-->
             <!--<field name="name">work_order_picking_sale_order_inherit</field>-->
             <!--<field name="model">stock.picking</field>-->
