--- a/product_extended/views/product_view.xml
+++ b/product_extended/views/product_view.xml
@@ -9,7 +9,7 @@
             <field name="inherit_id" ref="product.product_search_form_view"/>
             <field name="arch" type="xml">
                 <field name="categ_id" position="after" >
-                    <field name="supplier_id" domain="[('supplier', '=', True)]"/>
+                    <field name="supplier_id" domain="[('supplier', '=', True)]" context="{'partner_name': self}"/>
                     <field name="supplier_code" />
                 </field>
                 <field name="pricelist_id" position="before">
