--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -34,7 +34,7 @@
                     <group col="1" colspan="4">
                         <field name="order_requirement_line_ids" nolabel="1" />
                     </group>
-                    <button name="set_state_done" string="Mark as done" type="object" icon="gtk-ok"></button>
+                    <!--<button name="set_state_done" string="Mark as done" type="object" icon="gtk-ok"></button>-->
                     <newline />
                     <field name="user_id" />
                     <field name="state" widget="statusbar" statusbar_colors='{"draft":"red","done":"black","cancel":"grey"}'/>
