NOW sorting ok when editing

--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -31,7 +31,7 @@
                                                                          ('is_manufactured','=',False)]}">
                         <notebook colspan="4">
                             <page string="BOM">
-                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context=""
+                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context="" widget="one2many_list"
                                        on_change="onchange_temp_mrp_bom_ids(temp_mrp_bom_ids, context)"
                                        attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
                                                                  ('is_manufactured','=',False)],
