--- a/sale_order_requirement/views/view_company_form.xml
+++ b/sale_order_requirement/views/view_company_form.xml
@@ -2,7 +2,7 @@
 <openerp>
     <data>
         <record id="view_company_form_inherit" model="ir.ui.view">
-            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="inherit_id" ref="sale.mrp_company"/>
             <field name="name">res.company.mrp.config.inherit</field>
             <field name="model">res.company</field>
             <field name="arch" type="xml">
