--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-
         <record id="view_order_requirement_line_form" model="ir.ui.view">
             <field name="name">order.requirement.line.form</field>
             <field name="model">order.requirement.line</field>
@@ -12,7 +11,7 @@
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="sale_order_id" />
-                    <field name="state" />
+                    <field name="state" invisible="1"/>
                     <newline/>
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,context)"/>
                     <field name="qty"/>
@@ -59,6 +58,8 @@
                                                     'readonly': ['|',('is_manufactured', '=', True),
                                                                      ('product_type','!=','product'),
                                                                      ('level','=',0)]}"/>
+                                        <field name="purchase_order_line_id" />
+                                        <field name="mrp_production_id" />
                                         <field name="supplier_ids" invisible="1"/>
                                     </tree>
                                 </field>
@@ -74,6 +75,15 @@
                                         <field name="workcenter_id"/>
                                         <field name="user_id"/>
                                         <field name="user_ids" invisible="1"/>
+                                        <field name="name"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page string="Purchase lines">
+                                <field name="purchase_order_line_ids">
+                                    <tree string="Purchase lines"
+                                        colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                                        <field name="row_color" invisible="1"/>
                                         <field name="name"/>
                                     </tree>
                                 </field>
