--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -30,7 +30,7 @@
                                                                          ('is_manufactured','=',False)]}">
                         <notebook colspan="4">
                             <page string="BOM">
-                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context="" widget="one2many_list"
+                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context=""
                                        on_change="onchange_temp_mrp_bom_ids(temp_mrp_bom_ids, context)"
                                        attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
                                                                  ('is_manufactured','=',False)],
@@ -43,9 +43,10 @@
                                         <field name="level" invisible="1"/>
                                         <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
-                                        <field name="product_id"
-                                               attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
-                                        <field name="product_qty" attrs="{'readonly': ['|',('product_type','!=','product'),('level','=',0)]}"/>
+                                        <field name="product_id" context="{'line_id':parent.id}"
+                                               on_change="onchange_temp_product_id(id,level,product_id,product_qty,context)"
+                                               attrs="{'readonly': [('level','=',0)]}"/>
+                                        <field name="product_qty"/>
                                         <field name="product_uom" readonly="1"/>
                                         <field name="mrp_routing_id"/>
                                         <field name="stock_availability"/>
@@ -58,8 +59,8 @@
                                                     'readonly': ['|',('is_manufactured', '=', True),
                                                                      ('product_type','!=','product'),
                                                                      ('level','=',0)]}"/>
-                                        <field name="purchase_order_line_id" />
-                                        <field name="mrp_production_id" />
+                                        <!--<field name="purchase_order_line_id" />-->
+                                        <!--<field name="mrp_production_id" />-->
                                         <field name="supplier_ids" invisible="1"/>
                                     </tree>
                                 </field>
