--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -58,8 +58,8 @@
                                                     'readonly': ['|',('is_manufactured', '=', True),
                                                                      ('product_type','!=','product'),
                                                                      ('level','=',0)]}"/>
-                                        <field name="purchase_order_line_id" />
-                                        <field name="mrp_production_id" />
+                                        <!--<field name="purchase_order_line_id" />-->
+                                        <!--<field name="mrp_production_id" />-->
                                         <field name="supplier_ids" invisible="1"/>
                                     </tree>
                                 </field>
