fixed many 'paths', changing product and is_manufactured togheter

--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -54,7 +54,8 @@
                                         <field name="spare"/>
                                         <field name="cost"/>
                                         <field name="is_manufactured"
-                                            attrs="{'readonly': [('level','=',0)]}"/>
+                                            attrs="{'readonly': ['|',('level','=',0),
+                                                                     ('is_leaf','=',True)]}"/>
                                         <field name="supplier_id"
                                                attrs="{'required': [('is_manufactured', '=', False)],
                                                     'readonly': ['|',('is_manufactured', '=', True),
