--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -45,7 +45,7 @@
                                         <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
                                         <field name="product_id" context="{'line_id':parent.id}"
-                                               on_change="onchange_temp_product_id(id,bom_id,level,product_id,product_qty,context)"
+                                               on_change="onchange_temp_product_id(id,product_id,product_qty,is_manufactured,context)"
                                                attrs="{'readonly': [('level','=',0)]}"/>
                                         <field name="product_qty"/>
                                         <field name="product_uom" readonly="1"/>
