Added form showing processed order requirement

--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -63,8 +63,6 @@
                                                     'readonly': ['|',('is_manufactured', '=', True),
                                                                      ('product_type','!=','product'),
                                                                      ('level','=',0)]}"/>
-                                        <!--<field name="purchase_order_line_id" />-->
-                                        <!--<field name="mrp_production_id" />-->
                                         <field name="supplier_ids" invisible="1"/>
                                     </tree>
                                 </field>
@@ -80,15 +78,6 @@
                                         <field name="workcenter_id"/>
                                         <field name="user_id"/>
                                         <field name="user_ids" invisible="1"/>
-                                        <field name="name"/>
-                                    </tree>
-                                </field>
-                            </page>
-                            <page string="Purchase lines">
-                                <field name="purchase_order_line_ids">
-                                    <tree string="Purchase lines">
-                                        <!--colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">-->
-                                        <!--<field name="row_color" invisible="1"/>-->
                                         <field name="name"/>
                                     </tree>
                                 </field>
@@ -123,33 +112,49 @@
                                                                          ('is_manufactured','=',False)]}">
                         <notebook colspan="4">
                             <page string="BOM">
-                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4"
+                                <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" readonly="1" widget="one2many_list"
                                        attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
-                                                                 ('is_manufactured','=',False)]}"
-                                        readonly="1">
-                                    <tree string="BoM Structure"
+                                                                 ('is_manufactured','=',False)]}">
+                                    <tree string="BoM Structure" editable="top"
                                         colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                                         <field name="row_color" invisible="1"/>
                                         <field name="is_leaf"/>
-                                        <field name="id" invisible="1"/>
-                                        <field name="bom_id" invisible="1"/>
-                                        <field name="level" invisible="1"/>
-                                        <field name="product_type" invisible="1"/>
                                         <field name="level_name"/>
                                         <field name="product_id" readonly="1"/>
                                         <field name="product_qty" readonly="1"/>
                                         <field name="product_uom" readonly="1"/>
                                         <field name="mrp_routing_id"/>
-                                        <field name="stock_availability"/>
-                                        <field name="spare"/>
+                                        <!--<field name="stock_availability"/>-->
+                                        <!--<field name="spare"/>-->
                                         <field name="is_out_of_stock" invisible="1"/>
                                         <button name="out_of_stock_button" type="object" icon="gtk-dialog-error"
                                                 attrs="{'invisible': [('is_out_of_stock','=',False)]}"/>
                                         <field name="cost"/>
                                         <field name="is_manufactured" readonly="1"/>
                                         <field name="supplier_id"  readonly="1"/>
-                                        <field name="supplier_ids" invisible="1"/>
+                                        <field name="purchase_order_id" />
+                                        <field name="mrp_production_id" />
                                     </tree>
+                                    <form string="BoM Details">
+                                        <field name="product_id" readonly="1"/>
+                                        <field name="product_qty" readonly="1"/>
+                                        <field name="level"/>
+                                        <field name="is_leaf"/>
+                                        <field name="product_uom" readonly="1"/>
+                                        <field name="mrp_routing_id" attrs="{'invisibile': [('mrp_production_id','=',False)]}"/>
+                                        <field name="stock_availability"/>
+                                        <field name="spare"/>
+                                        <field name="is_out_of_stock" />
+                                        <button name="out_of_stock_button" type="object" icon="gtk-dialog-error"
+                                                attrs="{'invisible': [('is_out_of_stock','=',False)]}"/>
+                                        <button name="OK_stock_button" type="object" icon="STOCK_OK"
+                                                attrs="{'invisible': [('is_out_of_stock','!=',False)]}"/>
+                                        <field name="cost"/>
+                                        <field name="is_manufactured" readonly="1"/>
+                                        <field name="supplier_id"  readonly="1"/>
+                                        <field name="purchase_order_id" attrs="{'invisibile': [('purchase_order_id','=',False)]}"/>
+                                        <field name="mrp_production_id" attrs="{'invisibile': [('mrp_production_id','=',False)]}"/>
+                                    </form>
                                 </field>
                             </page>
                             <page string="Routing">
@@ -167,15 +172,24 @@
                                     </tree>
                                 </field>
                             </page>
-                            <page string="Purchase lines">
-                                <field name="purchase_order_line_ids">
-                                    <tree string="Purchase lines">
-                                        <!--colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">-->
-                                        <!--<field name="row_color" invisible="1"/>-->
-                                        <field name="name"/>
-                                    </tree>
-                                </field>
-                            </page>
+                            <!--<page string="Purchase Orders">-->
+                                <!--<field name="purchase_order_ids">-->
+                                    <!--<tree string="Purchase Orders">-->
+                                        <!--&lt;!&ndash;colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<field name="row_color" invisible="1"/>&ndash;&gt;-->
+                                        <!--<field name="name"/>-->
+                                    <!--</tree>-->
+                                <!--</field>-->
+                            <!--</page>-->
+                            <!--<page string="Production Orders">-->
+                                <!--<field name="mrp_production_ids">-->
+                                    <!--<tree string="Purchase Orders">-->
+                                        <!--&lt;!&ndash;colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<field name="row_color" invisible="1"/>&ndash;&gt;-->
+                                        <!--<field name="name"/>-->
+                                    <!--</tree>-->
+                                <!--</field>-->
+                            <!--</page>-->
                         </notebook>
                     </group>
                 </form>
@@ -196,7 +210,8 @@
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="state" />
-                    <button context="" name="action_open_bom" icon="gtk-execute" type="object"/> <!-- attrs="{'invisible': [('state','=','done')]}"/> -->
+                    <button context="" name="action_open_bom" icon="gtk-execute" type="object"
+                            attrs="{'invisible': [('state','=','done')]}"/>
                 </tree>
             </field>
         </record>
