[data_migration]: Added possibility to make update only of products without adding new.

--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -76,6 +76,7 @@
                         <field name="content_base64" filename="file_name" required="True" />
                         <field name="format" />
                         <field name="update_product_name" />
+                        <field name="update_only" />
                     </group>
                     
                     <!-- Items per lo stato end -->
