--- a/sale_order_version/views/sale_view.xml
+++ b/sale_order_version/views/sale_view.xml
@@ -52,6 +52,9 @@
             <field name="type">search</field>
             <field name="inherit_id" ref="sale.view_sales_order_filter"/>
             <field name="arch" type="xml">
+                <field name="name" position="replace" >
+                    <field name="name" filter_domain="['|', '|', ('name','ilike',self), ('client_order_ref','ilike',self), ('original_quotation_name','ilike',self)]"/>
+                </field>
                 <filter string="Order Date" position="after">
                     <filter string="Orig. Version" icon="terp-accessories-archiver" domain="[]"
                             context="{'group_by':'sale_version_id'}"/>
