--- a/sale_order_requirement/views/mrp_view.xml
+++ b/sale_order_requirement/views/mrp_view.xml
@@ -10,7 +10,7 @@
             <field name="arch" type="xml">
                 <filter name="inprogress" position="after">
                     <filter icon="terp-product" string="Main Products" name="mainproducts" domain="[('level','=',0)]"
-                   help="Manufacturing Orders related to main products (no children BoM)"/>
+                   help="Manufacturing Orders related to main products (hide children BoM)"/>
                 </filter>
             </field>
         </record>
